<resources>
    <string name="app_name">airatm</string>
    <string name="request_amount_hint">0.00</string>
    <string name="request_header">REQUEST A TRANSACTION</string>
    <string name="amount_header">ENTER AN AMOUNT</string>
    <string name="choose_location">CHOOSE A LOCATION</string>
    <string name="lend_header">ANSWER A TRANSACTION</string>
    <string name="lend">LEND</string>
    <string name="view_transactions">VIEW YOUR TRANSACTIONS</string>
    <string name="address_text">Address</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="name_text">Name: </string>
    <string name="first_name_hint">First</string>
    <string name="last_name_hint">Last</string>
    <string name="email_text">Email: </string>
    <string name="password_text">Password:</string>
    <string name="merchant_text">Merchant: </string>
    <string name="customer_text">Customer: </string>
    <string name="amount_text">Amount: </string>
    <string name="location_text">Location: </string>
    <string name="authenticate_button_text">AUTHENTICATE</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="confirm_button_text">CONFIRM</string>
    <string name="success_header">TRADE SUCCESS</string>
    <string name="rate_text">Rate your merchant:</string>
    <string name="OK_button">OK</string>
</resources>
