<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_loan"
        android:layout_marginTop="21dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:textSize="72dp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:fontFamily="@font/futura"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:fontFamily="@font/futura"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:fontFamily="@font/futura"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:textSize="24dp"
        android:fontFamily="@font/futura"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:textSize="24dp"
        android:fontFamily="@font/futura"/>

</LinearLayout>