<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".ConfirmationActivity"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/success_header"
        android:textSize="48dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/merchant_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura"
            android:text="@string/merchant_text"
            android:textAlignment="center"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/merchant_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[merchant]"
            android:textAlignment="center"
            android:fontFamily="@font/futura"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_text"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/amount_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[amount]"
            android:textAlignment="center"
            android:fontFamily="@font/futura"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura"
            android:text="@string/location_text"
            android:textAlignment="center"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/location_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[location]"
            android:textAlignment="center"
            android:fontFamily="@font/futura"
            android:textSize="24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/OK_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK_button"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:textSize="24dp"
        android:fontFamily="@font/futura"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>