<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationActivity"
    android:orientation="vertical" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="320dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/merchant_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/merchant_text"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/merchant_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[merchant]"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/amount_text"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/amount_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[amount]"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/location_text"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/location_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[location]"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/requestMoneyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button_text"
        android:textSize="24dp"
        android:fontFamily="@font/futura" />

</LinearLayout>