<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LendActivity"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lend_header"
        android:textSize="24dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/merchant_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura"
            android:text="@string/customer_text"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/merchant_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="jchu@me.ca"
            android:textAlignment="center"
            android:fontFamily="@font/futura"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_text"
            android:fontFamily="@font/futura"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/amount_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$50.00"
            android:textAlignment="center"
            android:fontFamily="@font/futura"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura"
            android:text="@string/location_text"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/location_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="43.657745, -79.377314"
            android:textAlignment="center"
            android:fontFamily="@font/futura"
            android:textSize="24dp" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="#c0c0c0"/>

</LinearLayout>